--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -7,27 +7,44 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="/project/public/styles/content.css" rel="stylesheet">
     <style>
-    .container{
-        padding-top: 50px;
-    
-    };
+      .top{
+        display: grid;
+        grid-template-columns: 1 1fr  ;
+        border: 3px solid black;
+        height: 100%;
+        background-color: antiquewhite;
+        flex:1;
+        margin-left: 3px;
+      }
+      .inside{
+        display: grid;
+        grid-template-columns: 1fr 1fr ;
 
+      }
+      .name,.score{
+        border-bottom: 1px solid black;
+        border-left: 1px solid black;
+        padding-left:50px ;
+      }
+
+      .above{
+        border-bottom: 3px solid black;
+        border-top: 3px solid black;
+        font-size: large;
+        font-family: Arial;
+        font-weight: bold;
+      }
+      .top-board-title{
+        font-size: 50px;
+        margin-bottom: 20px;
+        font-weight: bold;
+        color:black;
+        height: 0px;
+      }
+     
     </style>
-    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-        <symbol id="check2" viewBox="0 0 16 16">
-          <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path>
-        </symbol>
-        <symbol id="circle-half" viewBox="0 0 16 16">
-          <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"></path>
-        </symbol>
-        <symbol id="moon-stars-fill" viewBox="0 0 16 16">
-          <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"></path>
-          <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"></path>
-        </symbol>
-        <symbol id="sun-fill" viewBox="0 0 16 16">
-          <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"></path>
-        </symbol>
-      </svg>
+  
+   
   
       <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
         <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (dark)">
@@ -60,11 +77,12 @@
       </div>
   
       
-  <header>
     <!-- Fixed navbar -->
+  <body>
+    
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><h3>WECLOME <%=nam.toUpperCase() %> </h3></a>
+        <a class="navbar-brand" href="#"><h3>WECLOME <%=nam%> </h3></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -74,35 +92,92 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">View Participation History</a>
+              <a class="nav-link" href="/my-competitions">My Competitions</a>
             </li>
             <li class="nav-item">
               <a class="nav-link avtive" href="./index.ejs" aria-disabled="true">Sign out</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+ 
         </div>
       </div>
     </nav>
-  </header>
-  
-  <!-- Begin page content -->
-  <main class="flex-shrink-0">
-    <div class="container">
-      <h1 class="mt-5"> 
-      <p class="lead"><h1>View your competitions</h1> <code class="small"></code> <code class="small"> &gt; </code>.</p>
-      <p> <a href="/docs/5.3/examples/sticky-footer/"></a></p>
+
+  <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+    <div class="container-fluid ">
+      <p style="margin-top: 100px; font-family:Arial;color:black; font-weight: bolder; font-size: 50px;"> Enter  your competition quickly using email</p>
+      <form action="/participate" method="POST">
+        <div style="margin-bottom: 20px;" class="form-group">
+          <label for="email">Enter Organizers email</label>
+          <input type="text" id="email" name="email" required>
+        </div>
+        <button style="background-color:rgb(13, 110, 253); font-weight: bold;color:whitesmoke;border-radius: 20px;" class="participate-competiton" type="submit">Participate in a competition</button>
+      </form>
     </div>
-  </main>
+  </div>
   
-  <footer class="footer mt-auto py-3 bg-body-tertiary">
-    <div class="container">
-      <span class="text-body-secondary"></span>
+  <div class="row align-items-md-stretch">
+    <div class="col-md-6 mb-4">
+      <div class="h-100 p-5 text-light rounded-3" style="background-color: #334433;">
+        <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
+        <form action="/view-competition" method="POST">
+          <input value=<%=email%> name='email'hidden>
+          <input value=<%=rating %> name='rating' hidden>
+          <button class="btn btn-primary btn-lg" type="submit">View Competitions</button>
+        </form>
+      
+      </div>
     </div>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>  
+
+
+    <div class="col-md-6 mb-4">
+      <div class="h-100 p-5 rounded-3" style="background-color: #886622;">
+        <h2>Add borders</h2>
+        <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
+        <form action="authenticate" method="POST">
+          <input value=<%=email%> name='email'hidden>
+          <button class="btn btn-primary btn-lg" type="submit">Apply to Host Competition</button>
+        </form>
+      </div>
+    </div>
+
+  <div class="row align-items-md-stretch">
+    <div class="col-md-6 mb-4">
+      <div class="top">
+        <div class="top">
+          <div class="top-board-title">
+            <p>Top Five Performers</p>
+          </div>
+          <div class="inside">
+            <div class="name above">Name</div>
+            <div class="score above">Score</div>
+            <% scores.forEach(function(scores) { %>
+              <div class="name"><%= scores.name %></div>
+              <div class="score"><%= scores.score %></div>
+            <% }) %>
+          </div>
+        </div>
+        
+    </div>
+    </div>
+
+    
+    <div class="col-md-6 mb-4">
+      <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+        <h2>Add borders</h2>
+        <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
+        <form action="/createcompetition" method="POST">
+          <input type="hidden" name="email" value=<%= email %>>
+          <button class="btn btn-primary btn-lg" type="submit">Create Competition</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+      
+    
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>  
+  </body>
     
 </html>
