styles updates to view competitions

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,5 +2,6 @@
 <link rel="stylesheet" href="/styles/main.css"> -->
 
 <footer>
+  <p class="mt-5 mb-3 text-body-secondary">&copy; bracu project</p>
   Copyright &copy; Competition 2024
 </footer>
