--- a/views/viewcompetitonlist.ejs
+++ b/views/viewcompetitonlist.ejs
@@ -4,42 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of Competitions</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <link rel="stylesheet"  href="/styles/viewcompetition.css">
 
   
 </head>
 <body>
+    <%#- include('./partials/nav.ejs') %>
+
     <div class="container">
         <h1>List of Competitions</h1>
         <div id="competitions-container" class="competitions-container">
             <% competition.forEach(competition => { %>
-                <div class="competition-box">
-                    <div>Email: <%= competition.email %></div>
+                <% let backgroundImageUrl; %>
+                <% if (competition.genre === 'art') { %>
+                    <% backgroundImageUrl = '/art.jpg'; %>
+                <% } else if (competition.genre === 'coding') { %>
+                    <% backgroundImageUrl = '/code.jpg'; %>
+                <% } else if (competition.genre === 'music') { %>
+                    <% backgroundImageUrl = '/music.jpg'; %>
+                <% } else { %>
+                    <% backgroundImageUrl = '/sports.jpg'; %> <!-- Default image if genre is not art or code -->
+                <% } %>
+                <div class="competition-box" style="background-image: url('<%= backgroundImageUrl %>');">
+                    <div class="text-box">Email: <%= competition.email %></div>
                     <% if (competition.addedJudges && competition.addedJudges.includes(userEmail) || userEmail==competition.email) { %>
-                        <div>Type: Judge</div>
-                        <div>Genre:<%= competition.genre%></div>
+                        <!-- <div class="text-box">Type: Judge</div> -->
+                        <div class="text-box">Genre:<%= competition.genre%></div>
                         <form action="/judge" method="POST">
                             <div class="form-group">
                                 <input type="text" value=<%= competition.email %> name="organiser_email" hidden>
                                 <input type="text" value=<%= userEmail %> name="participant_email" hidden>
-                                <button class="judge-btn" type="submit">Judge</button>
+                                <button class="judge-btn glow-button" type="submit">Judge</button>
                             </div>
     
                     <% } else { %>
-                        <div>Type: Competitor</div>
-                        <div>Genre:<%= competition.genre%></div>
+                        <!-- <div class="text-box">Type: Competitor</div> -->
+                        <div class="text-box">Genre:<%= competition.genre%></div>
 
                         <form action="/participate" method="POST">
                             <div class="form-group">
                               <input type="text" value=<%= competition.email %> name="organiser_email" hidden>
                               <input type="text" value=<%= userEmail %> name="participant_email" hidden>
-                              <button class="judge-btn" type="submit">Participate</button>
+                              <button class="judge-btn glow-button" type="submit">Participate</button>
                             </div>
                         </form>
                         <form action="/profilepage" method="POST">
                             <div class="form-group">
                               <input type="text" value=<%= competition.email %> name="email" hidden>
-                              <button class="judge-btn" type="submit">View Profile</button>
+                              <button class="judge-btn glow-button" type="submit">View Profile</button>
                             </div>
                         </form>
                     <% } %>
