--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
 <body class="d-flex align-items-center py-4 bg-body-tertiary">
     
   <main class="form-signin w-100 m-auto">
-    <form action="/sign" method="POST">
+    <form action="/home" method="POST">
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
   
       <div class="form-floating">
@@ -53,7 +53,7 @@
       <a class="link" href="./questions.ejs">Forgot Password</a>
       <a class="link" href="/createaccount.ejs">Signup</a>
   
-      <p class="mt-5 mb-3 text-body-secondary">© bracu project</p>
+      <%- include('./partials/footer.ejs') %>
     </form>
   </main>
     
